MonetDB5/tests/by_Peter/Tests/tst_priv.mal
# Monet Mil to Mal compiler
# Copyright (c) 2001-2004, CWI. All rights reserved.

#Predefined code segment
#The compiler can not guarantee an accurate compilation,
#because MIL unlike MAL is a dynamically typed language.
#A few guidelines to maximize usefullness.
#- make the type of variables explicit, in particular 'nil'
#- upon advice of M2m to remap identifiers, change it in your program directly
#use the "mil_schema" for additional support routines
	mil.line("# test change of private mmap -> malloced under extends\n");
	aa_a := new(nil:void,nil:str,1000000);
	BAT_WRITE:= mil.take("BAT_WRITE");
	ba_a := persists(aa_a,true);
	ca_a := access(ba_a,BAT_WRITE);
	da_a := bat.setName(ca_a,"a");
	mil.line("var d := new(void,int,1000);");
	d := new(nil:void,nil:int,1000);
	mil.line("var i := 0;");
	i := 0;
	mil.line("while(i < 1000) d.insert(nil,i :+= 1);");
barrier	ea_a := true;
barrier	fa_a := <(i,1000);
!ERROR: "while(i < 1000) d.insert(nil,i :+= 1);"
!                          ^
! syntax error, unexpected TOK_IDENT, expecting '{'.
#Identifer 'rename' mapped to 'bat.setName'
